--- a/.gitignore
+++ b/.gitignore
@@ -3,23 +3,24 @@
 backend/.idea/*
 
 # FRONTEND IGNORED FILES
-# dependencies
+frontend/.idea/*
 frontend/node_modules
+frontend/node_modules/.pnp
+.pnp.js
 
-# builds
-frontend/build
-frontend/dist
-frontend/.rpt2_cache
+# testing
+frontend/node_modules/coverage
+
+# production
+frontend/node_modules/build
 
 # misc
-frontend/.DS_Store
-frontend/.env
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-frontend/.idea/*
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
