--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 Django==3.2.8
 django-cors-headers==3.10.0
 django-extensions==3.1.3
+django-filter==21.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 mysqlclient==2.0.3
