--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,18 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.0.4",
+    "@mui/lab": "^5.0.0-alpha.51",
     "@mui/material": "^5.0.4",
     "@mui/styled-engine": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.29.0",
+    "axios": "^0.24.0",
+    "date-fns": "^2.25.0",
+    "dayjs": "^1.10.7",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
