--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,12 @@ services:
   frontend:
     build:
       context: ./frontend
+#    command: npm run start
+#    ports:
+#      - "3000:3000"
     volumes:
       - build_folder:/frontend/build
+
   nginx:
     image: nginx:latest
     ports:
