--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,10 @@ services:
     build:
       context: ./frontend
 #    command: npm run start
-#    ports:
-#      - "3000:3000"
+    ports:
+      - "3000:3000"
     volumes:
       - build_folder:/frontend/build
-
   nginx:
     image: nginx:latest
     ports:
