--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   frontend:
     build:
       context: ./frontend
-#    command: npm run start
+    command: npm run start
     ports:
       - "3000:3000"
     volumes:
