--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -14,6 +14,8 @@ mysqlclient = "==2.0.3"
 pytz = "==2021.3"
 sqlparse = "==0.4.2"
 Django = "==3.2.8"
+waitress = "*"
+whitenoise = "*"
 
 [dev-packages]
 
